crates/crucible-cli/tests/snapshots/tui_snapshot_tests__conv_assistant_response.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > Hello                                                                        "
"                                                                                "
" · Hi! I'm here to help you with your code.                                     "
"                                                                                "
" >                                                                              "
"                                                                                "
"▸ Plan │ Ready                                                                  "
