crates/crucible-cli/tests/snapshots/tui_snapshot_tests__conv_full_exchange.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > What files handle authentication?                                            "
"                                                                                "
" ● Let me search for authentication-related files.                              "
"                                                                                "
"✓ grep auth → found in 3 files                                                  "
"                                                                                "
"✓ glob **/*auth*.rs → 2 files                                                   "
"  src/auth/mod.rs                                                               "
"  src/auth/jwt.rs                                                               "
"                                                                                "
" ● I found these authentication files:                                          "
"   - src/auth/mod.rs - Main module                                              "
"   - src/auth/jwt.rs - JWT handling                                             "
"                                                                                "
" >                                                                              "
"                                                                                "
"▸ Plan │ 256 tokens │ Ready                                                     "
