crates/crucible-cli/tests/snapshots/tui_snapshot_tests__conv_generating_tokens.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > Explain this code                                                            "
"                                                                                "
"◐ Generating... (127 tokens)                                                    "
"                                                                                "
" >                                                                              "
"                                                                                "
"▸ Act │ 127 tokens │ Generating                                                 "
