crates/crucible-cli/tests/snapshots/tui_snapshot_tests__conv_markdown_formatted.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > Show me an example                                                           "
"                                                                                "
" ● Here's a Rust example:                                                       "
"                                                                                "
"   fn main() {                                                                  "
"       println!("Hello, world!");                                               "
"   }                                                                            "
"                                                                                "
"   Use cargo run to execute it.                                                 "
"                                                                                "
"   You can also:                                                                "
"   - Build with cargo build                                                     "
"   - Test with cargo test                                                       "
"                                                                                "
"   See the Cargo Book for more details.                                         "
"                                                                                "
" >                                                                              "
"                                                                                "
"▸ Plan │ Ready                                                                  "
