crates/crucible-cli/tests/snapshots/tui_snapshot_tests__conv_multiple_tools.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > Search the codebase                                                          "
"                                                                                "
" · I'll search for relevant files.                                              "
"                                                                                "
"✓ grep pattern → 12 matches                                                     "
"                                                                                "
"◐ read src/main.rs                                                              "
"  fn main() {                                                                   "
"      println!("Hello");                                                        "
"  }                                                                             "
"                                                                                "
" >                                                                              "
"                                                                                "
"▸ Act │ Tool running                                                            "
