crates/crucible-cli/tests/snapshots/tui_snapshot_tests__conv_multiturn_tools.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > Read my note                                                                 "
"                                                                                "
" ● ▷ read({"filePath":"docs/Note1.md"})                                         "
"                                                                                "
" > Try again                                                                    "
"                                                                                "
" ● Let me try a different approach.                                             "
"                                                                                "
" >                                                                              "
"                                                                                "
"▸ Plan │ Ready                                                                  "
