crates/crucible-cli/tests/snapshots/tui_snapshot_tests__conv_prose_leading_newline.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > Test                                                                         "
"                                                                                "
" ● This is the actual content.                                                  "
"                                                                                "
" >                                                                              "
"                                                                                "
"▸ Plan │ Ready                                                                  "
