crates/crucible-cli/tests/snapshots/tui_snapshot_tests__conv_status_act.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│>                                                                             │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"▸ Act │ 200 tokens │ Ready                                                      "
