crates/crucible-cli/tests/snapshots/tui_snapshot_tests__conv_streaming_code_block.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > Show me code                                                                 "
"                                                                                "
" ● Here's the code:                                                             "
"   fn main() {                                                                  "
"       println!("Hel                                                            "
"                                                                                "
" >                                                                              "
"                                                                                "
"▸ Act │ 45 tokens │ Generating                                                  "
